--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             });
         });
     </script>
+    <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js">
+    </script>
+    <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js">
+    </script>
 </head>
 <body>
     <header class="side">
@@ -42,8 +48,11 @@
     </nav>
 </div>
 <div class="wrapper">
-    <div class="main">
+    <!-- <div class="main">
         <h2 class="br">What are you <br> having for Lunch?</h2>
+    </div> -->
+    <div class="main">
+        <h2>What would you <br> like to eat <span class="typed"></span></h2>
     </div>
     <!-- <div class="main">
         <h1>What would you like <span class="typed"></span></h1>
