--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                 Nachos
             </p>
         </div> 
-        <div id="vanish" class="flex-item-left"><img src="https://cdn.pixabay.com/photo/2017/08/02/12/21/nacho-2571340_1280.jpg" alt="Nachos">
+        <!-- <div id="vanish" class="flex-item-left"><img src="https://cdn.pixabay.com/photo/2017/08/02/12/21/nacho-2571340_1280.jpg" alt="Nachos">
             <p class="p">
                 Hakka Noddles
             </p>
-        </div> 
+        </div>  -->
     </div>
     <aside class="aside1">
         <p class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis reprehenderit, cum reiciendis amet animi maiores fugit ullam facilis, sequi incidunt placeat doloribus aut itaque debitis?</p>
