--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="flex-item-left">
             <img src="https://cdn.pixabay.com/photo/2016/08/23/08/53/tacos-1613795_1280.jpg" alt="Mexican Taco">
             <p class="p">
-                Mexican Taco
+                Mexican Tacos
             </p>
         </div>
         <div class="flex-item-left"><img src="https://cdn.pixabay.com/photo/2014/07/08/12/34/pizza-386717_1280.jpg" alt="Pizza">
