--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
         <p class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis reprehenderit, cum reiciendis amet animi maiores fugit ullam facilis, sequi incidunt placeat doloribus aut itaque debitis?</p>
     </aside>
 </div>
+<footer>
+    <br>
+    <br>
+</footer>
 <script type="text/javascript" src="script.js"></script>
 <script type="text/javascript">
     VanillaTilt.init(document.querySelectorAll(".flex-item-left"),{
