--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div> 
         <div class="flex-item-left"><img src="https://cdn.pixabay.com/photo/2017/08/02/12/21/nacho-2571340_1280.jpg" alt="Nachos">
             <p class="p">
-                Nachos
+                Loaded Nachos
             </p>
         </div> 
         <!-- <div id="vanish" class="flex-item-left"><img src="https://cdn.pixabay.com/photo/2017/08/02/12/21/nacho-2571340_1280.jpg" alt="Nachos">
