--- a/index.html
+++ b/index.html
@@ -27,23 +27,29 @@
 <body>
     <header class="side">
         <ul class="head">
-            <h1 class="logo">Lorem </h1>
-            <h1 id="vanish" class="logo">Ipsum</h1>
-                <i id="icon" class="fas fa-align-left"></i>
-                <i id="cart" class="fas fa-shopping-cart"></i>
+            <li class="logo">Lorem </li>
+            <li id="vanish" class="logo">Ipsum</li>
+            <li id="icon" class="fas fa-align-left"></li>
+            <li id="cart" class="fas fa-shopping-cart"></li>
+
+            <!-- <li class="green">
+                <i id="blur">nextpage</i>
+                <a href="./index2.html"><i class="fas fa-angle-double-right"></i></a>
+            </li> -->
+
         </ul>
     </header>
     <br>
 <div class="row">
     <nav>
         <ul>
-            <li><s>About</s></li>
+            <li><a href="./index2.html" style="text-decoration: none;"><s>Non-Veg</s></a></li>
             <li>Services</li>
             <li>Cuisine</li>
             <li>Gallery</li>
             <li>Contact</li>
             <li>Book</li>
-            <li id="btn"><button class="btn"><p>Cart</p></button></li>
+            <li id="btn"><button class="btn">Cart</button></li>
         </ul>
     </nav>
 </div>
@@ -93,8 +99,8 @@
     <br>
     <br>
 </footer>
-<script type="text/javascript" src="script.js"></script>
-<script type="text/javascript">
+<script src="script.js"></script>
+<script>
     VanillaTilt.init(document.querySelectorAll(".flex-item-left"),{
 		max: 20,
 		speed: 1000
